# rtic_arbiter_demo

./: Cargo.toml  LICENSE  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs  main.rs
